LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <formula>City__r.County__r.State__r.Country__r.Country_Code__c</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>