LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + City__r.County__c, City__r.County__r.Name, &quot;_blank&quot;)</formula>
    <label>County</label>
    <type>Text</type>
</CustomField>