LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <description>AUTO - Calculated by TERRITORY_RollupBatch. The number of Customer in this Zipcode.</description>
    <label>Customers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>