LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <description>AUTO - Calculated by TERRITORY_RollupBatch. The number of Accounts with open pre-sale Opportunities in this Zipcode.</description>
    <label>Open Opportunities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>