LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + City__r.County__r.State__c, City__r.County__r.State__r.Name, &quot;_blank&quot;)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>