LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/fields/Zip_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Zip_Country_Id__c</fullName>
    <description>Zip and country code combo Id used in the TriggerDispacter &apos;OwnerAssignmentRulesOnAcct&apos; implementation class to get territory assignments for all incoming zipcodes in their respective countries.</description>
    <formula>Name  +   City__r.County__r.State__r.Country__r.Country_Code__c</formula>
    <label>Zip Country Id</label>
    <type>Text</type>
</CustomField>