LWCLearnwithFLOWOrg/force-app/main/default/objects/Zipcode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Territory__c</columns>
    <columns>County__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>Country_Code__c</columns>
    <columns>City__c</columns>
    <columns>Zip_Country_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>9</value>
    </filters>
    <label>All</label>
</ListView>